Reformated the remaining ir classes for better readability.